// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Password > Form submission > should render form submit error 1`] = `
<div>
  <h2
    class="_message_0e731f"
  >
    A network error was encountered
  </h2>
</div>
`;

exports[`Password > should render error (unauthorized) 1`] = `
<div>
  <h2
    class="_message_0e731f"
  >
    401 - Unauthorized
  </h2>
</div>
`;

exports[`Password > should render error 1`] = `
<div>
  <h2
    class="_message_0e731f"
  >
    A network error was encountered
  </h2>
</div>
`;

exports[`Password > should render loading 1`] = `
<div>
  <h2
    class="_message_0e731f"
  >
    Loading...
  </h2>
</div>
`;

exports[`Password > should render profile 1`] = `
<div>
  <div
    class="_Password_0e731f"
  >
    <form
      class="_form_0e731f"
    >
      <div
        class="_inputGroup_0e731f"
      >
        <label
          class="_label_0e731f"
          for="currentPassword"
        >
          Current Password
        </label>
        <input
          class="_input_0e731f"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="_inputGroup_0e731f"
      >
        <label
          class="_label_0e731f"
          for="newPassword"
        >
          New Password
        </label>
        <input
          class="_input_0e731f"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="_inputGroup_0e731f"
      >
        <label
          class="_label_0e731f"
          for="passwordConfirmation"
        >
          Password Confirmation
        </label>
        <input
          class="_input_0e731f"
          id="passwordConfirmation"
          name="passwordConfirmation"
          type="password"
          value=""
        />
      </div>
      <div
        class="_buttonContainer_0e731f"
      >
        <input
          class="_submit_0e731f"
          type="submit"
          value="Submit"
        />
      </div>
    </form>
  </div>
</div>
`;
